# sudothink

./: INSTALL.md  LICENSE  MANIFEST.in  PRE_COMMIT_CHECKLIST.md  README.md  ai.py  ai.zsh  install-oneline.sh  install.sh  pyproject.toml  requirements.txt  setup.py  test_setup.py
.github/workflows/: release.yml
Formula/: sudothink.rb
sudothink/: __init__.py  assistant.py  cli.py  config.py  setup.py
