[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sudothink"
version = "1.0.0"
description = "An intelligent terminal assistant that uses OpenAI's GPT-4 to help with complex shell tasks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vusal Abdullayev", email = "abdulla.vusal.3@gmail.com"}
]
maintainers = [
    {name = "Vusal Abdullayev", email = "abdulla.vusal.3@gmail.com"}
]
keywords = ["terminal", "ai", "openai", "shell", "automation", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/vusallyv/sudothink"
Documentation = "https://github.com/vusallyv/sudothink#readme"
Repository = "https://github.com/vusallyv/sudothink"
"Bug Tracker" = "https://github.com/vusallyv/sudothink/issues"

[project.scripts]
sudothink = "sudothink.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sudothink*"]

[tool.setuptools.package-data]
sudothink = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 